feat/create-order: add integration to products service into ProductsAdapter + rewrite tests